<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/favoriteMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/transparent"
                    android:src="@drawable/baseline_favorite_border_24"
                    android:contentDescription="@string/favorite_menu" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_theme"
                    style="@style/Widget.App.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:thumbIcon="@drawable/baseline_lightbulb_circle_24" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/bg_search"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchUser"
            style="@style/poppinsRegular"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="?attr/colorOnPrimaryContainer"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_search_btn"
            android:contentDescription="@string/search_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/userFound"
        style="@style/poppinsLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/found_user"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="@+id/searchBar"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_searchuser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userFound" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>